# EngineeringCloudScript

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements-prod.txt
common/: constant.py  exception.py  logger_manager.py  utils.py
data/: users.example.json
service/: login.py  monthly_report.py  sign_in.py  weekly_report.py
